feat: apply community server metaserver loadouts
